@@ -3,6 +3,11 @@
 
 2007-01-03 Daniel Leidert <daniel.leidert@wgdd.de>
 
+	* src/chemical-mime-database.xml.in: Added an entry as test case for
+	pattern detection rules.
+
+2007-01-03 Daniel Leidert <daniel.leidert@wgdd.de>
+
 	* AUTHORS: Added some alternative mail addresses.
 	
 	* ChangeLog: Fixed my mail address.
